# MoKaFr-OS

./: .gitignore  CMakeLists.txt  Makefile  README.MD  burn-to-sd.sh  gdb.sh  kernel.c  kernel8.elf  kernel8.img  l-burn-to-sd.sh  link.ld  qemu-run-gdb.sh  qemu-run.sh  screen.sh  upload.sh  virt-qemu-run.sh
docs/: zadani.txt
scripts/: build.sh  run.sh
src/hal/: base.h  intdef.h  lib.h  liba.h  libc.h
src/hal/debug/: debug.h
src/hal/drivers/gfx/: fb.h  mb.h  (+1 more)
src/hal/filesystem/: fat.h  filesystem.h
src/hal/interrupt/: gic400.h  irq.h
src/hal/mm/: mm.h
src/hal/print/: print.h
src/hal/random_generator/: trng.h
src/hal/rng/: prng.h
src/hal/sched/: sched.h
src/hal/stdlib/: stdfile.h  stdstring.h
src/hal/sysfc/: fork.h  sys.h
src/hal/sysproc/: sysinfo.h
src/hal/timer/: arm_timer.h  local_timer.h  qemu_timer.h  system_timer.h
src/hal/uart/: uart.h
src/hal/user/: fs_terminal.h  gfx.h  mkdir.h  terminal.h
src/os/: boot.s  kernel.c  lib.h  liba.s  libc.c
src/os/debug/: debug.c
src/os/filesystem/: fat.c  filesystem.c
src/os/interrupt/: entry.s  gic400.c  irq.c  irqentry.s
src/os/mm/: mm.c  mma.S
src/os/print/: print.c  print.h
src/os/random_generator/: trng.c
src/os/rnd/: prng.c  trng.c
src/os/rng/: prng.c  trng.c
src/os/sched/: sched.c  scheda.S
src/os/stdlib/: stdfile.c  stdstring.c
src/os/sysfc/: fork.c  sys.c  sysa.S
src/os/sysproc/: sysinfo.c
src/os/timer/: arm_timer.c  local_timer.c  qemu_timer.c  system_timer.c  systemtimer.c
src/os/uart/: uart.c  uart.h
src/os/user/: fs_terminal.c  gfx.c  mkdir.c  terminal.c
(+9 files in other folders)
